# malankara-orthodox-lectionary-bot

./: Dockerfile  Makefile  README.md  bot.py  fly.toml  pyproject.toml
