[tool.poetry]
name = "malankara-orthodox-lectionary-bot"
version = "0.1.0"
description = ""
authors = ["reubenninan <intelphysic@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
beautifulsoup4 = "^4.12.2"
requests = "^2.31.0"
discord = "^2.3.0"
pylint = "^2.17.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
